syntax = "proto3";
package addrBook;



message Person {
   string name = 1;
   int32 id = 2;
   string email=3;

   enum phoneType {
     MOBILE = 0;
     HOME = 1;
     WORK = 2;
  }
  message PhoneNumber {
      string number = 1;
      phoneType ptype = 2;
  }
  repeated PhoneNumber number =4;
  map<string, string> hashtbl =5;
}

message AddressBook {
  repeated Person ppl = 1;
}

message HelloReq {
	string hreq = 1;
	int32  id =2;
}

service AddrTxn {
	rpc AddrReq (HelloReq) returns (Person) {}
}
